Testing cimport of numpy

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -6724,7 +6724,6 @@ $\phi$ raster's grid cells.
 
 #+NAME: phi-field-spatial-gradients-approx
 #+begin_src python
-# TODO: Fix error with importing pyretechnics.types
 import cython
 if cython.compiled:
     from cython.cimports.pyretechnics.math import sqrt, atan
@@ -10181,7 +10180,6 @@ The following table contains the current mapping from ELMFIRE parameters to Pyre
 
 #+NAME: units-conversion
 #+begin_src python
-# TODO: Fix error with importing pyretechnics.types
 import cython
 if cython.compiled:
     from cython.cimports.pyretechnics.math import sqrt, sin, cos, tan, atan, atan2
@@ -10491,14 +10489,17 @@ cpdef float opposite_direction(float theta)
 
 #+NAME: vector-utilities
 #+begin_src python
-# TODO: Fix error with importing pyretechnics.types
+# Fix cimport of numpy
 import cython
 if cython.compiled:
+    from numpy import add, multiply, cross
+    # from cython.cimports.numpy import add, multiply, cross
     from cython.cimports.pyretechnics.math import sqrt, sin, cos
     from cython.cimports.pyretechnics.cy_types import pyidx, vec_xy, vec_xyz
     from cython.cimports.pyretechnics.conversion import \
         opposite_direction, azimuthal_to_cartesian, cartesian_to_azimuthal, deg_to_rad
 else:
+    from numpy import add, multiply, cross
     from math import sqrt, sin, cos
     from pyretechnics.py_types import pyidx, vec_xy, vec_xyz
     from pyretechnics.conversion import \
@@ -10506,7 +10507,6 @@ else:
 
 
 import cython as cy
-import numpy as np
 
 
 @cy.profile(False)
@@ -10623,11 +10623,11 @@ def rotate_on_sloped_plane(vector: cy.double[:], theta: cy.float, slope: cy.floa
     slope_normal_vector: vec_xyz = get_slope_normal_vector(elevation_gradient)
     # Rotate theta degrees clockwise around the slope_normal_vector
     theta_rad: cy.float = deg_to_rad(theta)
-    return np.add(np.multiply(cos(theta_rad),
+    return add(multiply(cos(theta_rad),
+                        vector),
+               cross(multiply(sin(theta_rad),
                               vector),
-                  np.cross(np.multiply(sin(theta_rad),
-                                       vector),
-                           slope_normal_vector))
+                    slope_normal_vector))
 #+end_src
 
 #+NAME: vector-utils-pxd
