--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -3216,9 +3216,9 @@ pprint({k: surface_fire_min[k] for k in ["base_spread_rate", "base_fireline_inte
 #+NAME: compute-surface-fire-behavior-min-results
 #+RESULTS: compute-surface-fire-behavior-min
 : No-Wind-No-Slope Surface Fire Behavior for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
-: {'base_fireline_intensity': 1.789997884491001,
-:  'base_spread_rate': 0.12637238760906658,
-:  'max_effective_wind_speed': 109.77292783706747}
+: {'base_fireline_intensity': 1.7899978160858154,
+:  'base_spread_rate': 0.12637238204479218,
+:  'max_effective_wind_speed': 109.7729263305664}
 
 *** How to Translate the 10m Wind Speed Vector into the Midflame Wind Speed Vector
     :PROPERTIES:
@@ -3258,7 +3258,7 @@ print("Midflame Wind Speed and Direction for 10m Wind Speed = 20 km/hr, Upwind D
 #+RESULTS: translate-10m-wind-to-midflame-wind
 : Midflame Wind Speed and Direction for 10m Wind Speed = 20 km/hr, Upwind Direction = 45.0
 :  with Fuel Model GR1, Canopy Height = 20m, and Canopy Cover = 60%
-: - Speed: 27.224285989299275 (m/min)
+: - Speed: 27.22428573967944 (m/min)
 : - Downwind Direction: 225.0 (degrees clockwise from North)
 
 *** How to Calculate the Surface Fire Behavior in the Direction of Maximum Spread
@@ -3323,20 +3323,20 @@ pprint(surface_fire_max_unlimited)
 #+RESULTS: compute-surface-fire-behavior-max
 #+begin_example
 Surface Fire Behavior Max (Limited) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
-{'eccentricity': 0.8693098652160369,
- 'length_to_width_ratio': 2.0231959552088243,
- 'max_fireline_intensity': 32.52824122084378,
- 'max_flame_length': 0.38439328501240777,
- 'max_spread_direction': array([0.57514209, 0.80992594, 0.11502841]),
- 'max_spread_rate': 2.2964672435747526}
+{'eccentricity': 0.8693098689345452,
+ 'length_to_width_ratio': 2.02319598197937,
+ 'max_fireline_intensity': 32.52824021555232,
+ 'max_flame_length': 0.384393279547724,
+ 'max_spread_direction': array([0.57514209, 0.80992595, 0.11502841]),
+ 'max_spread_rate': 2.2964671592467902}
 
 Surface Fire Behavior Max (Unlimited) for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
-{'eccentricity': 0.9845208629992017,
- 'length_to_width_ratio': 5.705566788206421,
- 'max_fireline_intensity': 330.5232659226435,
- 'max_flame_length': 1.1167831712051006,
- 'max_spread_direction': array([0.57514209, 0.80992594, 0.11502841]),
- 'max_spread_rate': 23.334672424413625}
+{'eccentricity': 0.9845208635180694,
+ 'length_to_width_ratio': 5.705566883087158,
+ 'max_fireline_intensity': 330.52326520812335,
+ 'max_flame_length': 1.1167831700945479,
+ 'max_spread_direction': array([0.57514209, 0.80992595, 0.11502841]),
+ 'max_spread_rate': 23.334672238265263}
 #+end_example
 
 *** How to Calculate the Surface Fire Behavior in Any Direction
@@ -3409,24 +3409,24 @@ pprint(backing_fire_behavior)
 #+begin_example
 Heading Fire Behavior for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 32.528241220843725,
- 'flame_length': 0.3843932850124075,
- 'spread_direction': array([0.57514209, 0.80992594, 0.11502841]),
- 'spread_rate': 2.2964672435747486}
+ 'fireline_intensity': 32.52824021555232,
+ 'flame_length': 0.384393279547724,
+ 'spread_direction': array([0.57514209, 0.80992595, 0.11502841]),
+ 'spread_rate': 2.2964671592467902}
 
 Flanking Fire Behavior for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 4.25112006790012,
- 'flame_length': 0.1507465825700851,
+ 'fireline_intensity': 4.251119815561923,
+ 'flame_length': 0.15074657845399436,
  'spread_direction': array([ 0.79419771, -0.58653219,  0.15883956]),
- 'spread_rate': 0.3001256021853451}
+ 'spread_rate': 0.30012558262508093}
 
 Backing Fire Behavior for Fuel Model GR1 with Fuel Moisture = [0.05, 0.1, 0.15, 0.05, 0.9, 0.6]
 {'fire_type': 'surface',
- 'fireline_intensity': 2.2741656204473273,
- 'flame_length': 0.11305091610423658,
- 'spread_direction': array([-0.57514209, -0.80992594, -0.11502841]),
- 'spread_rate': 0.160554234038162}
+ 'fireline_intensity': 2.2741654809334264,
+ 'flame_length': 0.11305091291396749,
+ 'spread_direction': array([-0.57514209, -0.80992595, -0.11502841]),
+ 'spread_rate': 0.1605542232548844}
 #+end_example
 
 * Crown Fire Equations (pyretechnics.crown_fire)
@@ -4411,8 +4411,8 @@ Inputs:
 
 Outputs:
 {'critical_spread_rate': 10.0,
- 'eccentricity': 0.8218958686973863,
- 'length_to_width_ratio': 1.7555015923811355,
+ 'eccentricity': 0.821895863285579,
+ 'length_to_width_ratio': 1.7555015683174133,
  'max_fire_type': 'active_crown',
  'max_fireline_intensity': 82666.07018304318,
  'max_spread_direction': array([0.        , 0.89442718, 0.44721359]),
@@ -4434,8 +4434,8 @@ Inputs:
 
 Outputs:
 {'critical_spread_rate': 10.0,
- 'eccentricity': 0.8024265702196313,
- 'length_to_width_ratio': 1.6757411715581005,
+ 'eccentricity': 0.8024265608222492,
+ 'length_to_width_ratio': 1.6757411360740662,
  'max_fire_type': 'active_crown',
  'max_fireline_intensity': 74768.3487091958,
  'max_spread_direction': array([ 0.00000000e+00,  1.00000000e+00, -2.18556941e-08]),
@@ -4505,23 +4505,23 @@ pprint(backing_fire_behavior)
 Heading Fire Behavior
 ============================================================
 {'fire_type': 'active_crown',
- 'fireline_intensity': 78838.15458910092,
+ 'fireline_intensity': 78838.15458910078,
  'spread_direction': array([0.        , 0.94280905, 0.33333334]),
- 'spread_rate': 31.383616202151572}
+ 'spread_rate': 31.383616202151522}
 
 Flanking Fire Behavior
 ============================================================
 {'fire_type': 'passive_crown',
- 'fireline_intensity': 14756.204313417364,
+ 'fireline_intensity': 14756.204692934614,
  'spread_direction': array([ 0.94868329, -0.1054093 ,  0.29814238]),
- 'spread_rate': 3.264617884997446}
+ 'spread_rate': 3.264617919639856}
 
 Backing Fire Behavior
 ============================================================
 {'fire_type': 'passive_crown',
- 'fireline_intensity': 8139.8762162369485,
+ 'fireline_intensity': 8139.876447202802,
  'spread_direction': array([-0.        , -0.94280905, -0.33333334]),
- 'spread_rate': 2.343474222933295}
+ 'spread_rate': 2.343474267882084}
 #+end_example
 
 *** How to Calculate the Combined Surface and Crown Fire Behavior in Any Direction
@@ -4673,10 +4673,10 @@ else:
 : Fire Behavior from Surface Fire (No Crown Fire Occurred)
 : ============================================================
 : {'fire_type': 'surface',
-:  'fireline_intensity': 11.637272830800834,
-:  'flame_length': 0.23956727015326687,
+:  'fireline_intensity': 11.637272319887389,
+:  'flame_length': 0.2395672653150934,
 :  'spread_direction': array([0.87038827, 0.        , 0.49236599]),
-:  'spread_rate': 0.8215819502516378}
+:  'spread_rate': 0.82158190940362}
 
 * Spot Fire Equations (pyretechnics.spot_fire)
   :PROPERTIES:
@@ -5723,15 +5723,17 @@ pprint({
 #+begin_example
 Median Areal Heat Output (kJ/m^2) for All Surface Fuel Models
 ================================================================================
-{'dry': 9517.751902280774, 'mod': 7050.167242235583, 'wet': 3533.8204025496834}
+{'dry': 9517.751889162279, 'mod': 7050.1670422893385, 'wet': 3533.8201824045955}
 
 Mean Areal Heat Output (kJ/m^2) for All Surface Fuel Models
 ================================================================================
-{'dry': 14270.339257437603, 'mod': 10954.33091872254, 'wet': 5705.411098489761}
+{'dry': 14270.339217272918,
+ 'mod': 10954.330808704475,
+ 'wet': 5705.4111616613945}
 
 Max Areal Heat Output (kJ/m^2) for All Surface Fuel Models
 ================================================================================
-{'dry': 54285.277323657836, 'mod': 45108.62895623446, 'wet': 32325.036430921675}
+{'dry': 54285.275558317175, 'mod': 45108.6289738327, 'wet': 32325.037970995523}
 #+end_example
 
 #+NAME: areal-heat-output-all-fm-dry
@@ -6535,18 +6537,18 @@ pprint(combined_behavior_unlimited)
 Fire Behavior from Combined Surface and Crown Fire (with Wind Limit) at Coordinate (24, 100, 100)
 ====================================================================================================
 {'fire_type': 'surface',
- 'fireline_intensity': 32.52824122084375,
- 'flame_length': 0.38439328501240766,
+ 'fireline_intensity': 32.52824021555232,
+ 'flame_length': 0.384393279547724,
  'spread_direction': array([0.48686891, 0.61304247, 0.62220382]),
- 'spread_rate': 2.2964672435747504}
+ 'spread_rate': 2.2964671592467902}
 
 Fire Behavior from Combined Surface and Crown Fire (without Wind Limit) at Coordinate (24, 100, 100)
 ====================================================================================================
 {'fire_type': 'surface',
- 'fireline_intensity': 50.61290579388001,
- 'flame_length': 0.47108156555948116,
+ 'fireline_intensity': 50.61290348687427,
+ 'flame_length': 0.4710815556821105,
  'spread_direction': array([0.48686891, 0.61304247, 0.62220382]),
- 'spread_rate': 3.5732297811201863}
+ 'spread_rate': 3.5732295974671913}
 #+end_example
 
 *** How to Burn a Cell in Any Direction
@@ -6642,18 +6644,18 @@ pprint(combined_behavior_unlimited)
 Fire Behavior from Combined Surface and Crown Fire (with Wind Limit) at Coordinate (24, 100, 100)
 ====================================================================================================
 {'fire_type': 'surface',
- 'fireline_intensity': 11.637272184891115,
- 'flame_length': 0.2395672640367254,
+ 'fireline_intensity': 11.637271673977688,
+ 'flame_length': 0.23956725919855196,
  'spread_direction': array([ 8.70388269e-01, -3.80458793e-08,  4.92365986e-01]),
- 'spread_rate': 0.8215819046509395}
+ 'spread_rate': 0.8215818638029233}
 
 Fire Behavior from Combined Surface and Crown Fire (without Wind Limit) at Coordinate (24, 100, 100)
 ====================================================================================================
 {'fire_type': 'surface',
- 'fireline_intensity': 13.898200839601216,
- 'flame_length': 0.2599542205809359,
+ 'fireline_intensity': 13.898200206313783,
+ 'flame_length': 0.2599542151321845,
  'spread_direction': array([ 8.70388269e-01, -3.80458793e-08,  4.92365986e-01]),
- 'spread_rate': 0.9812016197271485}
+ 'spread_rate': 0.9812015693113519}
 #+end_example
 
 * Fire Spread Algorithm: Eulerian Level Set Method (ELMFIRE) (pyretechnics.eulerian_level_set)
@@ -8499,25 +8501,25 @@ Stop Time: 2550.0 (minutes)
 Stop Condition: max duration reached
 
 Phi (phi <= 0: burned, phi > 0: unburned
-{'Min': -0.9256893, 'Max': 1.0, 'Mean': 0.9060591, 'Stdev': 0.38920093}
+{'Min': -0.9256893, 'Max': 1.0, 'Mean': 0.9060591, 'Stdev': 0.3892009}
 
 Fire Type (0=unburned, 1=surface, 2=passive_crown, 3=active_crown)
 {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 
 Spread Rate (m/min)
-{'Min': 0.16077118, 'Max': 2.2964668, 'Mean': 1.211648, 'Stdev': 0.6341628}
+{'Min': 0.16077118, 'Max': 2.2964668, 'Mean': 1.2116479, 'Stdev': 0.63416284}
 
 Spread Direction (degrees clockwise from North)
-{'Min': 0.65846, 'Max': 359.69885, 'Mean': 191.40175, 'Stdev': 117.93309}
+{'Min': 0.65860283, 'Max': 359.69885, 'Mean': 191.40175, 'Stdev': 117.9331}
 
 Fireline Intensity (kW/m)
-{'Min': 2.2772386, 'Max': 32.528233, 'Mean': 17.16235, 'Stdev': 8.98258}
+{'Min': 2.2772384, 'Max': 32.528233, 'Mean': 17.16235, 'Stdev': 8.98258}
 
 Flame Length (meters)
 {'Min': 0.11312116, 'Max': 0.38439324, 'Mean': 0.27523616, 'Stdev': 0.07356827}
 
 Time of Arrival (minutes)
-{'Min': 2081.8516, 'Max': 2548.1523, 'Mean': 2385.591, 'Stdev': 116.83734}
+{'Min': 2081.8516, 'Max': 2548.1523, 'Mean': 2385.591, 'Stdev': 116.83735}
 #+end_example
 
 **** Create Images of the Output Matrices
@@ -8855,13 +8857,13 @@ Fire Type (0=unburned, 1=surface, 2=passive_crown, 3=active_crown)
 {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 
 Spread Rate (m/min)
-{'Min': 0.16055718, 'Max': 2.2964666, 'Mean': 1.3839706, 'Stdev': 0.6849228}
+{'Min': 0.16055717, 'Max': 2.2964664, 'Mean': 1.3839705, 'Stdev': 0.6849228}
 
 Spread Direction (degrees clockwise from North)
-{'Min': 0.015501725, 'Max': 359.823, 'Mean': 179.89368, 'Stdev': 127.71465}
+{'Min': 0.015500052, 'Max': 359.823, 'Mean': 179.89368, 'Stdev': 127.71465}
 
 Fireline Intensity (kW/m)
-{'Min': 2.2742074, 'Max': 32.52823, 'Mean': 19.60321, 'Stdev': 9.701569}
+{'Min': 2.274207, 'Max': 32.52823, 'Mean': 19.603209, 'Stdev': 9.701569}
 
 Flame Length (meters)
 {'Min': 0.11305187, 'Max': 0.38439322, 'Mean': 0.29242113, 'Stdev': 0.079029635}
@@ -8875,41 +8877,41 @@ Firebrand Count (number of firebrands)
 Total Firebrands on Grid: 743
 
 Future Spot Ignitions:
-{2551.1975872246294: {(78, 75)},
- 2551.41264882651: {(79, 54), (80, 60)},
- 2551.8568054218845: {(82, 36)},
- 2553.242946902038: {(73, 50)},
- 2553.503079660735: {(82, 42)},
- 2553.670619046169: {(88, 50)},
- 2554.838075045936: {(78, 64)},
- 2555.5251004606916: {(78, 60), (78, 58)},
- 2556.2804252683736: {(80, 74)},
- 2556.956797139484: {(79, 80), (78, 75)},
- 2557.1956179112426: {(72, 52), (75, 51)},
- 2560.051319222669: {(82, 76)},
- 2560.0546762952063: {(75, 81)},
- 2562.224290899111: {(78, 53)},
- 2563.01303934983: {(60, 78)},
- 2563.863116897054: {(81, 38)},
- 2566.6678267193665: {(82, 40)},
- 2567.2125612853533: {(78, 77)},
- 2567.3587640264323: {(83, 69)},
- 2569.330376256175: {(79, 77)},
- 2570.921655322671: {(83, 43), (83, 36)},
- 2573.7323021656953: {(92, 51)},
- 2574.658587317199: {(53, 44)},
- 2574.7942252879043: {(85, 72)},
- 2575.8510399606234: {(81, 65), (80, 63)},
- 2576.9250366141023: {(90, 38)},
- 2576.970322053317: {(78, 60), (80, 63)},
- 2581.2574406038552: {(73, 78)},
- 2583.255900463565: {(84, 31)},
- 2583.532525084117: {(84, 54)},
- 2583.7573020374803: {(70, 84)},
- 2591.914720289493: {(66, 34), (71, 40)},
- 2592.883811381346: {(64, 36)},
- 2603.1104057780935: {(80, 55)},
- 2613.441077472167: {(61, 37)}}
+{2551.197586000257: {(78, 75)},
+ 2551.4126499292092: {(79, 54), (80, 60)},
+ 2551.856804638606: {(82, 36)},
+ 2553.2429458344905: {(73, 50)},
+ 2553.503079371683: {(82, 42)},
+ 2553.67061884271: {(88, 50)},
+ 2554.83807664013: {(78, 64)},
+ 2555.525101157285: {(78, 60), (78, 58)},
+ 2556.2804247854724: {(80, 74)},
+ 2556.956798222929: {(79, 80), (78, 75)},
+ 2557.1956190287556: {(72, 52), (75, 51)},
+ 2560.051319507768: {(82, 76)},
+ 2560.054675129427: {(75, 81)},
+ 2562.2242880384597: {(78, 53)},
+ 2563.013039281081: {(60, 78)},
+ 2563.8631185172394: {(81, 38)},
+ 2566.6678273977955: {(82, 40)},
+ 2567.212561600751: {(78, 77)},
+ 2567.3587638733025: {(83, 69)},
+ 2569.330376022855: {(79, 77)},
+ 2570.921410793652: {(83, 43), (83, 36)},
+ 2573.732302770297: {(92, 51)},
+ 2574.6585895680705: {(53, 44)},
+ 2574.794226434831: {(85, 72)},
+ 2575.851040433648: {(81, 65), (80, 63)},
+ 2576.9250365965636: {(90, 38)},
+ 2576.970322423062: {(78, 60), (80, 63)},
+ 2581.257440902062: {(73, 78)},
+ 2583.2559022370483: {(84, 31)},
+ 2583.532526699624: {(84, 54)},
+ 2583.757301741892: {(70, 84)},
+ 2591.9147207078995: {(66, 34), (71, 40)},
+ 2592.883811071109: {(64, 36)},
+ 2603.1104006041915: {(80, 55)},
+ 2613.4410783216385: {(61, 37)}}
 #+end_example
 
 **** Create Images of the Output Matrices with Spotting Enabled
@@ -9366,28 +9368,28 @@ Stop Condition (Main): max duration reached
 Stop Condition (Fork): max duration reached
 
 Phi (phi <= 0: burned, phi > 0: unburned
-Main: {'Min': -0.92524624, 'Max': 1.0, 'Mean': 0.7945678, 'Stdev': 0.5639848}
-Fork: {'Min': -0.92524624, 'Max': 1.0, 'Mean': 0.7984585, 'Stdev': 0.5611055}
+Main: {'Min': -0.92524624, 'Max': 1.0, 'Mean': 0.7945679, 'Stdev': 0.5639848}
+Fork: {'Min': -0.92524624, 'Max': 1.0, 'Mean': 0.7984585, 'Stdev': 0.56110543}
 
 Fire Type (0=unburned, 1=surface, 2=passive_crown, 3=active_crown)
 Main: {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 Fork: {'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 
 Spread Rate (m/min)
-Main: {'Min': 0.16077118, 'Max': 2.2964668, 'Mean': 1.2057377, 'Stdev': 0.63797575}
+Main: {'Min': 0.16077118, 'Max': 2.2964668, 'Mean': 1.2057376, 'Stdev': 0.63797575}
 Fork: {'Min': 0.16077118, 'Max': 2.2964668, 'Mean': 1.1890496, 'Stdev': 0.63051146}
 
 Spread Direction (degrees clockwise from North)
-Main: {'Min': 0.27234477, 'Max': 359.69885, 'Mean': 190.26033, 'Stdev': 117.35211}
-Fork: {'Min': 0.27234477, 'Max': 359.69885, 'Mean': 192.25833, 'Stdev': 116.70385}
+Main: {'Min': 0.27234977, 'Max': 359.69885, 'Mean': 190.26033, 'Stdev': 117.35211}
+Fork: {'Min': 0.27234977, 'Max': 359.69885, 'Mean': 192.25833, 'Stdev': 116.70385}
 
 Fireline Intensity (kW/m)
-Main: {'Min': 2.2772386, 'Max': 32.528233, 'Mean': 17.078634, 'Stdev': 9.036589}
-Fork: {'Min': 2.2772386, 'Max': 32.528233, 'Mean': 16.842258, 'Stdev': 8.9308605}
+Main: {'Min': 2.2772384, 'Max': 32.528233, 'Mean': 17.078634, 'Stdev': 9.036589}
+Fork: {'Min': 2.2772384, 'Max': 32.528233, 'Mean': 16.842258, 'Stdev': 8.9308605}
 
 Flame Length (meters)
-Main: {'Min': 0.11312116, 'Max': 0.38439324, 'Mean': 0.2746018, 'Stdev': 0.073415086}
-Fork: {'Min': 0.11312116, 'Max': 0.38439324, 'Mean': 0.27287117, 'Stdev': 0.07285743}
+Main: {'Min': 0.11312116, 'Max': 0.38439324, 'Mean': 0.2746018, 'Stdev': 0.07341509}
+Fork: {'Min': 0.11312116, 'Max': 0.38439324, 'Mean': 0.27287114, 'Stdev': 0.07285744}
 
 Time of Arrival (minutes)
 Main: {'Min': 2081.8516, 'Max': 2789.743, 'Mean': 2543.6892, 'Stdev': 173.15517}
@@ -10180,6 +10182,7 @@ The following table contains the current mapping from ELMFIRE parameters to Pyre
 
 #+NAME: units-conversion
 #+begin_src python
+# TODO: Replace @cy.profile(False) calls with a file-level compiler directive
 import cython
 if cython.compiled:
     from cython.cimports.pyretechnics.math import sqrt, sin, cos, tan, atan, atan2
@@ -10210,219 +10213,303 @@ def deg_to_rad(degrees: cy.float) -> cy.float:
     return degrees * PI / 180.0
 
 
-def deg_to_ratio(degrees):
+@cy.profile(False)
+@cy.ccall
+def deg_to_ratio(degrees: cy.float) -> cy.float:
     """Convert degrees to ratio."""
     return tan(deg_to_rad(degrees))
 
 
-def ratio_to_deg(ratio):
+@cy.profile(False)
+@cy.ccall
+def ratio_to_deg(ratio: cy.float) -> cy.float:
     """Convert ratio to degrees."""
     return rad_to_deg(atan(ratio))
 
 
-def F_to_K(degrees):
+@cy.profile(False)
+@cy.ccall
+def F_to_K(degrees: cy.float) -> cy.float:
     """Convert fahrenheit to kelvin."""
     return (degrees + 459.67) * 0.5555555555555556
 
 
-def K_to_F(degrees):
+@cy.profile(False)
+@cy.ccall
+def K_to_F(degrees: cy.float) -> cy.float:
     """Convert kelvin to fahrenheit."""
     return (degrees * 1.8) - 459.67
 
 
-def F_to_C(degrees):
+@cy.profile(False)
+@cy.ccall
+def F_to_C(degrees: cy.float) -> cy.float:
     """Convert fahrenheit to celsius."""
     return (degrees - 32.0) * 0.5555555555555556
 
 
-def C_to_F(degrees):
+@cy.profile(False)
+@cy.ccall
+def C_to_F(degrees: cy.float) -> cy.float:
     """Convert celsius to fahrenheit."""
     return (degrees * 1.8) + 32.0
 
 
-def ch_to_m(ch):
+@cy.profile(False)
+@cy.ccall
+def ch_to_m(ch: cy.float) -> cy.float:
     """Convert chains to meters."""
     return ch * 20.1168
 
 
-def m_to_ch(m):
+@cy.profile(False)
+@cy.ccall
+def m_to_ch(m: cy.float) -> cy.float:
     """Convert meters to chains."""
     return m * 0.0497097
 
 
-def m_to_ft(m):
+@cy.profile(False)
+@cy.ccall
+def m_to_ft(m: cy.float) -> cy.float:
     """Convert meters to feet."""
     return m * 3.281
 
 
-def ft_to_m(ft):
+@cy.profile(False)
+@cy.ccall
+def ft_to_m(ft: cy.float) -> cy.float:
     """Convert feet to meters."""
     return ft * 0.30478512648582745
 
 
-def mph_to_mps(mph):
+@cy.profile(False)
+@cy.ccall
+def mph_to_mps(mph: cy.float) -> cy.float:
     """Convert miles per hour to meters per second."""
     return mph * 0.44701818551254696
 
 
-def mps_to_mph(mps):
+@cy.profile(False)
+@cy.ccall
+def mps_to_mph(mps: cy.float) -> cy.float:
     """Convert meters per second to miles per hour."""
     return mps * 2.237045454545455
 
 
-def km_hr_to_mps(km_hr):
+@cy.profile(False)
+@cy.ccall
+def km_hr_to_mps(km_hr: cy.float) -> cy.float:
     """Convert kilometers per hour to meters per second."""
     return km_hr * 0.277764222883701
 
 
-def mps_to_km_hr(mps):
+@cy.profile(False)
+@cy.ccall
+def mps_to_km_hr(mps: cy.float) -> cy.float:
     """Convert meters per second to kilometers per hour."""
     return mps * 3.6001756800000004
 
 
-def mph_to_km_hr(mph):
+@cy.profile(False)
+@cy.ccall
+def mph_to_km_hr(mph: cy.float) -> cy.float:
     """Convert miles per hour to kilometers per hour."""
     return mph * 1.609344
 
 
-def km_hr_to_mph(km_hr):
+@cy.profile(False)
+@cy.ccall
+def km_hr_to_mph(km_hr: cy.float) -> cy.float:
     """Convert kilometers per hour to miles per hour."""
     return km_hr * 0.621371192237334
 
 
-def m_min_to_km_hr(m_min):
+@cy.profile(False)
+@cy.ccall
+def m_min_to_km_hr(m_min: cy.float) -> cy.float:
     """Convert meters per minute to kilometers per hour."""
     return m_min * 0.06
 
 
-def km_hr_to_m_min(km_hr):
+@cy.profile(False)
+@cy.ccall
+def km_hr_to_m_min(km_hr: cy.float) -> cy.float:
     """Convert kilometers per hour to meters per minute."""
     return km_hr / 0.06
 
 
-def m_min_to_mph(m_min):
+@cy.profile(False)
+@cy.ccall
+def m_min_to_mph(m_min: cy.float) -> cy.float:
     """Convert meters per minute to miles per hour."""
     return m_min * 0.0372840909091
 
 
-def mph_to_m_min(mph):
+@cy.profile(False)
+@cy.ccall
+def mph_to_m_min(mph: cy.float) -> cy.float:
     """Convert miles per hour to meters per minute."""
     return mph * 26.8210911307
 
 
-def mps_to_fpm(mps):
+@cy.profile(False)
+@cy.ccall
+def mps_to_fpm(mps: cy.float) -> cy.float:
     """Convert meters per second to feet per minute."""
     return mps * 196.86
 
 
-def fpm_to_mps(fpm):
+@cy.profile(False)
+@cy.ccall
+def fpm_to_mps(fpm: cy.float) -> cy.float:
     """Convert feet per minute to meters per second."""
     return fpm / 196.86
 
 
-def mph_to_fpm(mph):
+@cy.profile(False)
+@cy.ccall
+def mph_to_fpm(mph: cy.float) -> cy.float:
     """Convert miles per hour to feet per minute."""
     return mph * 88.0
 
 
-def fpm_to_mph(fpm):
+@cy.profile(False)
+@cy.ccall
+def fpm_to_mph(fpm: cy.float) -> cy.float:
     """Convert feet per minute to miles per hour."""
     return fpm / 88.0
 
 
-def Btu_ft_s_to_kW_m(Btu_ft_s):
+@cy.profile(False)
+@cy.ccall
+def Btu_ft_s_to_kW_m(Btu_ft_s: cy.float) -> cy.float:
     """Convert BTU per feet per second to kilowatt per meter."""
     return Btu_ft_s * 3.46165186
 
 
-def kW_m_to_Btu_ft_s(kW_m):
+@cy.profile(False)
+@cy.ccall
+def kW_m_to_Btu_ft_s(kW_m: cy.float) -> cy.float:
     """Convert kilowatt per meter to BTU per feet per second."""
     return kW_m * 0.28887942532730604
 
 
-def Btu_lb_to_kJ_kg(Btu_lb):
+@cy.profile(False)
+@cy.ccall
+def Btu_lb_to_kJ_kg(Btu_lb: cy.float) -> cy.float:
     """Convert BTU per lb to kilojoule per kilogram."""
     return Btu_lb * 2.3259999996185
 
 
-def kJ_kg_to_Btu_lb(kJ_kg):
+@cy.profile(False)
+@cy.ccall
+def kJ_kg_to_Btu_lb(kJ_kg: cy.float) -> cy.float:
     """Convert kilojoule per kilogram to BTU per lb."""
     return kJ_kg / 2.3259999996185
 
 
-def kg_m3_to_lb_ft3(kg_m3):
+@cy.profile(False)
+@cy.ccall
+def kg_m3_to_lb_ft3(kg_m3: cy.float) -> cy.float:
     """Convert kilogram per cubic meter to pound per cubic foot."""
     return kg_m3 * 0.0624
 
 
-def lb_ft3_to_kg_m3(lb_ft3):
+@cy.profile(False)
+@cy.ccall
+def lb_ft3_to_kg_m3(lb_ft3: cy.float) -> cy.float:
     """Convert pound per cubic foot to kilogram per cubic meter."""
     return lb_ft3 * 16.025641025641026
 
 
-def percent_to_dec(percent):
+@cy.profile(False)
+@cy.ccall
+def percent_to_dec(percent: cy.float) -> cy.float:
     """Convert percent to decimal."""
     return percent * 0.01
 
 
-def dec_to_percent(decimal):
+@cy.profile(False)
+@cy.ccall
+def dec_to_percent(decimal: cy.float) -> cy.float:
     """Convert decimal to percent."""
     return decimal * 100.0
 
 
-def sec_to_min(seconds):
+@cy.profile(False)
+@cy.ccall
+def sec_to_min(seconds: cy.float) -> cy.float:
     """Convert seconds to minutes."""
     return seconds * 0.016666666666666666
 
 
-def min_to_sec(minutes):
+@cy.profile(False)
+@cy.ccall
+def min_to_sec(minutes: cy.float) -> cy.float:
     """Convert minutes to seconds."""
     return minutes * 60.0
 
 
-def ms_to_min(milliseconds):
+@cy.profile(False)
+@cy.ccall
+def ms_to_min(milliseconds: cy.float) -> cy.float:
     """Convert milliseconds to minutes."""
     return milliseconds * 0.000016667
 
 
-def min_to_ms(minutes):
+@cy.profile(False)
+@cy.ccall
+def min_to_ms(minutes: cy.float) -> cy.float:
     """Convert minutes to milliseconds."""
-    return int(minutes * 60000.0)
+    return minutes * 60000.0
 
 
-def hour_to_min(hours):
+@cy.profile(False)
+@cy.ccall
+def hour_to_min(hours: cy.float) -> cy.float:
     """Converts hours to minutes."""
     return hours * 60.0
 
 
-def min_to_hour(minutes):
-    """Converts minutes to hours. (rounds down)"""
-    return int(minutes / 60.0)
+@cy.profile(False)
+@cy.ccall
+def min_to_hour(minutes: cy.float) -> cy.float:
+    """Converts minutes to hours."""
+    return minutes / 60.0
 
 
-def day_to_min(days):
+@cy.profile(False)
+@cy.ccall
+def day_to_min(days: cy.float) -> cy.float:
     """Convert days to minutes."""
     return days * 1440.0
 
 
-def min_to_day(minutes):
+@cy.profile(False)
+@cy.ccall
+def min_to_day(minutes: cy.float) -> cy.float:
     """Convert minutes to days."""
     return minutes / 1440.0
 
 
-def cartesian_to_polar(x, y):
+@cy.profile(False)
+@cy.ccall
+def cartesian_to_polar(x: cy.float, y: cy.float) -> vec_xy:
     """Convert cartesian coordinates (x, y) to polar coordinates (r, theta)."""
-    r         = sqrt(x ** 2.0 + y ** 2.0)
-    theta_rad = atan2(y, x)
-    theta     = rad_to_deg(theta_rad) % 360.0
+    r        : cy.float = sqrt(x * x + y * y)
+    theta_rad: cy.float = atan2(y, x)
+    theta    : cy.float = rad_to_deg(theta_rad) % 360.0
     return (r, theta)
 
 
-def polar_to_cartesian(r, theta):
+@cy.profile(False)
+@cy.ccall
+def polar_to_cartesian(r: cy.float, theta: cy.float) -> vec_xy:
     """Convert polar coordinates (r, theta) to cartesian coordinates (x, y)."""
-    theta_rad = deg_to_rad(theta)
-    x         = r * cos(theta_rad)
-    y         = r * sin(theta_rad)
+    theta_rad: cy.float = deg_to_rad(theta)
+    x        : cy.float = r * cos(theta_rad)
+    y        : cy.float = r * sin(theta_rad)
     return (x, y)
 
 
@@ -10453,12 +10540,16 @@ def opposite_direction(theta: cy.float) -> cy.float:
     return (theta + 180.0) % 360.0
 
 
-def wind_speed_10m_to_wind_speed_20ft(wind_speed_10m):
+@cy.profile(False)
+@cy.ccall
+def wind_speed_10m_to_wind_speed_20ft(wind_speed_10m: cy.float) -> cy.float:
     """Convert wind speed at 10m to wind speed at 20ft."""
     return 0.87 * wind_speed_10m
 
 
-def wind_speed_20ft_to_wind_speed_10m(wind_speed_20ft):
+@cy.profile(False)
+@cy.ccall
+def wind_speed_20ft_to_wind_speed_10m(wind_speed_20ft: cy.float) -> cy.float:
     """Convert wind speed at 20ft to wind speed at 10m."""
     return wind_speed_20ft / 0.87
 #+end_src
