--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -10182,7 +10182,7 @@ The following table contains the current mapping from ELMFIRE parameters to Pyre
 
 #+NAME: units-conversion
 #+begin_src python
-# TODO: Replace @cy.profile(False) calls with a file-level compiler directive
+# cython: profile=False
 import cython
 if cython.compiled:
     from cython.cimports.pyretechnics.math import sqrt, sin, cos, tan, atan, atan2
@@ -10198,7 +10198,6 @@ import cython as cy
 PI = cy.declare(cy.double, 3.14159265358979323846)
 
 
-@cy.profile(False)
 @cy.ccall
 @cy.cdivision(True)
 def rad_to_deg(radians: cy.float) -> cy.float:
@@ -10206,294 +10205,252 @@ def rad_to_deg(radians: cy.float) -> cy.float:
     return radians * 180.0 / PI
 
 
-@cy.profile(False)
 @cy.ccall
 def deg_to_rad(degrees: cy.float) -> cy.float:
     """Convert degrees to radians."""
     return degrees * PI / 180.0
 
 
-@cy.profile(False)
 @cy.ccall
 def deg_to_ratio(degrees: cy.float) -> cy.float:
     """Convert degrees to ratio."""
     return tan(deg_to_rad(degrees))
 
 
-@cy.profile(False)
 @cy.ccall
 def ratio_to_deg(ratio: cy.float) -> cy.float:
     """Convert ratio to degrees."""
     return rad_to_deg(atan(ratio))
 
 
-@cy.profile(False)
 @cy.ccall
 def F_to_K(degrees: cy.float) -> cy.float:
     """Convert fahrenheit to kelvin."""
     return (degrees + 459.67) * 0.5555555555555556
 
 
-@cy.profile(False)
 @cy.ccall
 def K_to_F(degrees: cy.float) -> cy.float:
     """Convert kelvin to fahrenheit."""
     return (degrees * 1.8) - 459.67
 
 
-@cy.profile(False)
 @cy.ccall
 def F_to_C(degrees: cy.float) -> cy.float:
     """Convert fahrenheit to celsius."""
     return (degrees - 32.0) * 0.5555555555555556
 
 
-@cy.profile(False)
 @cy.ccall
 def C_to_F(degrees: cy.float) -> cy.float:
     """Convert celsius to fahrenheit."""
     return (degrees * 1.8) + 32.0
 
 
-@cy.profile(False)
 @cy.ccall
 def ch_to_m(ch: cy.float) -> cy.float:
     """Convert chains to meters."""
     return ch * 20.1168
 
 
-@cy.profile(False)
 @cy.ccall
 def m_to_ch(m: cy.float) -> cy.float:
     """Convert meters to chains."""
     return m * 0.0497097
 
 
-@cy.profile(False)
 @cy.ccall
 def m_to_ft(m: cy.float) -> cy.float:
     """Convert meters to feet."""
     return m * 3.281
 
 
-@cy.profile(False)
 @cy.ccall
 def ft_to_m(ft: cy.float) -> cy.float:
     """Convert feet to meters."""
     return ft * 0.30478512648582745
 
 
-@cy.profile(False)
 @cy.ccall
 def mph_to_mps(mph: cy.float) -> cy.float:
     """Convert miles per hour to meters per second."""
     return mph * 0.44701818551254696
 
 
-@cy.profile(False)
 @cy.ccall
 def mps_to_mph(mps: cy.float) -> cy.float:
     """Convert meters per second to miles per hour."""
     return mps * 2.237045454545455
 
 
-@cy.profile(False)
 @cy.ccall
 def km_hr_to_mps(km_hr: cy.float) -> cy.float:
     """Convert kilometers per hour to meters per second."""
     return km_hr * 0.277764222883701
 
 
-@cy.profile(False)
 @cy.ccall
 def mps_to_km_hr(mps: cy.float) -> cy.float:
     """Convert meters per second to kilometers per hour."""
     return mps * 3.6001756800000004
 
 
-@cy.profile(False)
 @cy.ccall
 def mph_to_km_hr(mph: cy.float) -> cy.float:
     """Convert miles per hour to kilometers per hour."""
     return mph * 1.609344
 
 
-@cy.profile(False)
 @cy.ccall
 def km_hr_to_mph(km_hr: cy.float) -> cy.float:
     """Convert kilometers per hour to miles per hour."""
     return km_hr * 0.621371192237334
 
 
-@cy.profile(False)
 @cy.ccall
 def m_min_to_km_hr(m_min: cy.float) -> cy.float:
     """Convert meters per minute to kilometers per hour."""
     return m_min * 0.06
 
 
-@cy.profile(False)
 @cy.ccall
 def km_hr_to_m_min(km_hr: cy.float) -> cy.float:
     """Convert kilometers per hour to meters per minute."""
     return km_hr / 0.06
 
 
-@cy.profile(False)
 @cy.ccall
 def m_min_to_mph(m_min: cy.float) -> cy.float:
     """Convert meters per minute to miles per hour."""
     return m_min * 0.0372840909091
 
 
-@cy.profile(False)
 @cy.ccall
 def mph_to_m_min(mph: cy.float) -> cy.float:
     """Convert miles per hour to meters per minute."""
     return mph * 26.8210911307
 
 
-@cy.profile(False)
 @cy.ccall
 def mps_to_fpm(mps: cy.float) -> cy.float:
     """Convert meters per second to feet per minute."""
     return mps * 196.86
 
 
-@cy.profile(False)
 @cy.ccall
 def fpm_to_mps(fpm: cy.float) -> cy.float:
     """Convert feet per minute to meters per second."""
     return fpm / 196.86
 
 
-@cy.profile(False)
 @cy.ccall
 def mph_to_fpm(mph: cy.float) -> cy.float:
     """Convert miles per hour to feet per minute."""
     return mph * 88.0
 
 
-@cy.profile(False)
 @cy.ccall
 def fpm_to_mph(fpm: cy.float) -> cy.float:
     """Convert feet per minute to miles per hour."""
     return fpm / 88.0
 
 
-@cy.profile(False)
 @cy.ccall
 def Btu_ft_s_to_kW_m(Btu_ft_s: cy.float) -> cy.float:
     """Convert BTU per feet per second to kilowatt per meter."""
     return Btu_ft_s * 3.46165186
 
 
-@cy.profile(False)
 @cy.ccall
 def kW_m_to_Btu_ft_s(kW_m: cy.float) -> cy.float:
     """Convert kilowatt per meter to BTU per feet per second."""
     return kW_m * 0.28887942532730604
 
 
-@cy.profile(False)
 @cy.ccall
 def Btu_lb_to_kJ_kg(Btu_lb: cy.float) -> cy.float:
     """Convert BTU per lb to kilojoule per kilogram."""
     return Btu_lb * 2.3259999996185
 
 
-@cy.profile(False)
 @cy.ccall
 def kJ_kg_to_Btu_lb(kJ_kg: cy.float) -> cy.float:
     """Convert kilojoule per kilogram to BTU per lb."""
     return kJ_kg / 2.3259999996185
 
 
-@cy.profile(False)
 @cy.ccall
 def kg_m3_to_lb_ft3(kg_m3: cy.float) -> cy.float:
     """Convert kilogram per cubic meter to pound per cubic foot."""
     return kg_m3 * 0.0624
 
 
-@cy.profile(False)
 @cy.ccall
 def lb_ft3_to_kg_m3(lb_ft3: cy.float) -> cy.float:
     """Convert pound per cubic foot to kilogram per cubic meter."""
     return lb_ft3 * 16.025641025641026
 
 
-@cy.profile(False)
 @cy.ccall
 def percent_to_dec(percent: cy.float) -> cy.float:
     """Convert percent to decimal."""
     return percent * 0.01
 
 
-@cy.profile(False)
 @cy.ccall
 def dec_to_percent(decimal: cy.float) -> cy.float:
     """Convert decimal to percent."""
     return decimal * 100.0
 
 
-@cy.profile(False)
 @cy.ccall
 def sec_to_min(seconds: cy.float) -> cy.float:
     """Convert seconds to minutes."""
     return seconds * 0.016666666666666666
 
 
-@cy.profile(False)
 @cy.ccall
 def min_to_sec(minutes: cy.float) -> cy.float:
     """Convert minutes to seconds."""
     return minutes * 60.0
 
 
-@cy.profile(False)
 @cy.ccall
 def ms_to_min(milliseconds: cy.float) -> cy.float:
     """Convert milliseconds to minutes."""
     return milliseconds * 0.000016667
 
 
-@cy.profile(False)
 @cy.ccall
 def min_to_ms(minutes: cy.float) -> cy.float:
     """Convert minutes to milliseconds."""
     return minutes * 60000.0
 
 
-@cy.profile(False)
 @cy.ccall
 def hour_to_min(hours: cy.float) -> cy.float:
     """Converts hours to minutes."""
     return hours * 60.0
 
 
-@cy.profile(False)
 @cy.ccall
 def min_to_hour(minutes: cy.float) -> cy.float:
     """Converts minutes to hours."""
     return minutes / 60.0
 
 
-@cy.profile(False)
 @cy.ccall
 def day_to_min(days: cy.float) -> cy.float:
     """Convert days to minutes."""
     return days * 1440.0
 
 
-@cy.profile(False)
 @cy.ccall
 def min_to_day(minutes: cy.float) -> cy.float:
     """Convert minutes to days."""
     return minutes / 1440.0
 
 
-@cy.profile(False)
 @cy.ccall
 def cartesian_to_polar(x: cy.float, y: cy.float) -> vec_xy:
     """Convert cartesian coordinates (x, y) to polar coordinates (r, theta)."""
@@ -10503,7 +10460,6 @@ def cartesian_to_polar(x: cy.float, y: cy.float) -> vec_xy:
     return (r, theta)
 
 
-@cy.profile(False)
 @cy.ccall
 def polar_to_cartesian(r: cy.float, theta: cy.float) -> vec_xy:
     """Convert polar coordinates (r, theta) to cartesian coordinates (x, y)."""
@@ -10513,7 +10469,6 @@ def polar_to_cartesian(r: cy.float, theta: cy.float) -> vec_xy:
     return (x, y)
 
 
-@cy.profile(False)
 @cy.ccall
 def cartesian_to_azimuthal(x: cy.float, y: cy.float) -> vec_xy:
     """Convert cartesian coordinates (x, y) to azimuthal coordinates (r, azimuth)."""
@@ -10523,7 +10478,6 @@ def cartesian_to_azimuthal(x: cy.float, y: cy.float) -> vec_xy:
     return (r, azimuth)
 
 
-@cy.profile(False)
 @cy.ccall
 def azimuthal_to_cartesian(r: cy.float, azimuth: cy.float) -> vec_xy:
     """Convert azimuthal coordinates (r, azimuth) to cartesian coordinates (x, y)."""
@@ -10533,21 +10487,18 @@ def azimuthal_to_cartesian(r: cy.float, azimuth: cy.float) -> vec_xy:
     return (x, y)
 
 
-@cy.profile(False)
 @cy.ccall
 def opposite_direction(theta: cy.float) -> cy.float:
     """Convert theta to theta + 180 degrees."""
     return (theta + 180.0) % 360.0
 
 
-@cy.profile(False)
 @cy.ccall
 def wind_speed_10m_to_wind_speed_20ft(wind_speed_10m: cy.float) -> cy.float:
     """Convert wind speed at 10m to wind speed at 20ft."""
     return 0.87 * wind_speed_10m
 
 
-@cy.profile(False)
 @cy.ccall
 def wind_speed_20ft_to_wind_speed_10m(wind_speed_20ft: cy.float) -> cy.float:
     """Convert wind speed at 20ft to wind speed at 10m."""
@@ -10565,9 +10516,53 @@ from pyretechnics.cy_types cimport vec_xy
 
 cpdef float rad_to_deg(float radians)
 cpdef float deg_to_rad(float degrees)
+cpdef float deg_to_ratio(float degrees)
+cpdef float ratio_to_deg(float ratio)
+cpdef float F_to_K(float degrees)
+cpdef float K_to_F(float degrees)
+cpdef float F_to_C(float degrees)
+cpdef float C_to_F(float degrees)
+cpdef float ch_to_m(float ch)
+cpdef float m_to_ch(float m)
+cpdef float m_to_ft(float m)
+cpdef float ft_to_m(float ft)
+cpdef float mph_to_mps(float mph)
+cpdef float mps_to_mph(float mps)
+cpdef float km_hr_to_mps(float km_hr)
+cpdef float mps_to_km_hr(float mps)
+cpdef float mph_to_km_hr(float mph)
+cpdef float km_hr_to_mph(float km_hr)
+cpdef float m_min_to_km_hr(float m_min)
+cpdef float km_hr_to_m_min(float km_hr)
+cpdef float m_min_to_mph(float m_min)
+cpdef float mph_to_m_min(float mph)
+cpdef float mps_to_fpm(float mps)
+cpdef float fpm_to_mps(float fpm)
+cpdef float mph_to_fpm(float mph)
+cpdef float fpm_to_mph(float fpm)
+cpdef float Btu_ft_s_to_kW_m(float Btu_ft_s)
+cpdef float kW_m_to_Btu_ft_s(float kW_m)
+cpdef float Btu_lb_to_kJ_kg(float Btu_lb)
+cpdef float kJ_kg_to_Btu_lb(float kJ_kg)
+cpdef float kg_m3_to_lb_ft3(float kg_m3)
+cpdef float lb_ft3_to_kg_m3(float lb_ft3)
+cpdef float percent_to_dec(float percent)
+cpdef float dec_to_percent(float decimal)
+cpdef float sec_to_min(float seconds)
+cpdef float min_to_sec(float minutes)
+cpdef float ms_to_min(float milliseconds)
+cpdef float min_to_ms(float minutes)
+cpdef float hour_to_min(float hours)
+cpdef float min_to_hour(float minutes)
+cpdef float day_to_min(float days)
+cpdef float min_to_day(float minutes)
+cpdef vec_xy cartesian_to_polar(float x, float y)
+cpdef vec_xy polar_to_cartesian(float r, float theta)
 cpdef vec_xy cartesian_to_azimuthal(float x, float y)
 cpdef vec_xy azimuthal_to_cartesian(float r, float azimuth)
 cpdef float opposite_direction(float theta)
+cpdef float wind_speed_10m_to_wind_speed_20ft(float wind_speed_10m)
+cpdef float wind_speed_20ft_to_wind_speed_10m(float wind_speed_20ft)
 #+end_src
 
 ** Vector Utility Functions (pyretechnics.vector_utils)
